--- a/src/app/pages/vardiya/components/karsilastirma/karsilastirma.component.html
+++ b/src/app/pages/vardiya/components/karsilastirma/karsilastirma.component.html
@@ -239,8 +239,12 @@
                                 Yoğun LPG</span>
                         </div>
                         <div class="flex items-center gap-3">
-                            <span class="text-sm font-normal opacity-70">{{ grup.toplamLitre | number:'1.2-2' }}
-                                Lt</span>
+                            <div class="flex items-center gap-3 text-sm font-normal opacity-70">
+                                <span class="flex items-center"><i class="pi pi-car mr-1"></i>{{ grup.aracSayisi
+                                    }}</span>
+                                <span class="flex items-center"><i class="pi pi-filter mr-1"></i>{{ grup.toplamLitre |
+                                    number:'1.2-2' }} Lt</span>
+                            </div>
                             <span class="text-primary font-bold">{{ grup.toplamTutar |
                                 currency:'TRY':'symbol-narrow':'1.2-2':'tr' }}</span>
                         </div>
