--- a/src/app/pages/vardiya/components/vardiya-listesi/vardiya-listesi.component.html
+++ b/src/app/pages/vardiya/components/vardiya-listesi/vardiya-listesi.component.html
@@ -129,8 +129,6 @@
         </div>
     </div>
 
-
-
     <!-- Vardiya Listesi -->
     <div class="col-span-12">
         <div class="card">
@@ -218,17 +216,23 @@
                         </td>
                         <td>
                             <div class="flex gap-2 justify-end">
-                                <p-button icon="pi pi-check-square" severity="success" size="small" label="Mutabakat"
-                                    [disabled]="vardiya.durum === 'ONAYLANDI'" (onClick)="mutabakatYap(vardiya)">
-                                </p-button>
-                                <p-button icon="pi pi-trash" severity="danger" size="small" [outlined]="true"
-                                    pTooltip="Sil" (onClick)="vardiyaSil(vardiya)">
-                                </p-button>
+                                <button pButton pRipple icon="pi pi-file-excel"
+                                    class="p-button-rounded p-button-success p-button-text mr-2"
+                                    (click)="mutabakatYap(vardiya)"
+                                    [pTooltip]="vardiya.durum === 'REDDEDILDI' ? 'Mutabakatı Düzenle' : 'Mutabakat Başlat'"
+                                    tooltipPosition="top"
+                                    *ngIf="vardiya.durum === 'ACIK' || vardiya.durum === 'REDDEDILDI'"></button>
+                                <button pButton pRipple icon="pi pi-download"
+                                    class="p-button-rounded p-button-info p-button-text mr-2"
+                                    (click)="dosyaIndir(vardiya)" pTooltip="Dosyayı İndir"
+                                    tooltipPosition="top"></button>
+                                <button pButton pRipple icon="pi pi-trash"
+                                    class="p-button-rounded p-button-danger p-button-text" (click)="vardiyaSil(vardiya)"
+                                    pTooltip="Sil" tooltipPosition="top"></button>
                             </div>
                         </td>
                     </tr>
                 </ng-template>
-
 
                 <ng-template pTemplate="emptymessage">
                     <tr>
