--- a/src/app/pages/vardiya/components/pompa-yonetimi/pompa-yonetimi.component.scss
+++ b/src/app/pages/vardiya/components/pompa-yonetimi/pompa-yonetimi.component.scss
@@ -38,3 +38,22 @@
         padding: 0.5rem;
     }
 }
+
+// Center action buttons in table cells
+:host ::ng-deep .p-datatable td:last-child {
+    text-align: center;
+}
+
+:host ::ng-deep .p-datatable td .flex.justify-center {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    gap: 0.25rem;
+}
+
+// Icon-only rounded buttons styling
+:host ::ng-deep .p-datatable td .p-button.p-button-rounded.p-button-text {
+    width: 2.25rem;
+    height: 2.25rem;
+    padding: 0;
+}
